правки по всем страницам

--- a/index.html
+++ b/index.html
@@ -99,6 +99,24 @@
         <a href="shipping-china-history.html">отправки из китая история отправок</a>
     </li>
     <li>
+        <a href="shipping-china-history-2.html">отправки из китая история отправок 2</a>
+    </li>
+    <li>
+        <a href="shipping-china-history-3.html">отправки из китая история отправок 3</a>
+    </li>
+    <li>
+        <a href="shipping-china-history-3-2.html">отправки из китая история отправок 3 - 2</a>
+    </li>
+    <li>
+        <a href="shipping-china-history-3-3.html">отправки из китая история отправок 3 - 3</a>
+    </li>
+    <li>
+        <a href="shipping-china-history-4.html">отправки из китая история отправок 4</a>
+    </li>
+    <li>
+        <a href="shipping-china-history-5.html">отправки из китая история отправок 5</a>
+    </li>
+    <li>
         <a href="shipping-history.html">история отправок</a>
     </li>
     <li>
@@ -109,6 +127,18 @@
     </li>
     <li>
         <a href="Dispatch-from-China-ORDER-IN-STOCK-selected.html">отправки из китая ЗАКАЗЫ НА СКЛАДЕ уже выбрали</a>
+    </li>
+    <li>
+        <a href="Dispatch-from-China-ORDER-IN-STOCK-selected-2.html">отправки из китая ЗАКАЗЫ НА СКЛАДЕ уже выбрали 2</a>
+    </li>
+    <li>
+        <a href="Dispatch-from-China-ORDER-IN-STOCK-selected-3.html">отправки из китая ЗАКАЗЫ НА СКЛАДЕ уже выбрали 3</a>
+    </li>
+    <li>
+        <a href="Dispatch-from-China-ORDER-IN-STOCK-selected-4.html">отправки из китая ЗАКАЗЫ НА СКЛАДЕ уже выбрали 4</a>
+    </li>
+    <li>
+        <a href="Dispatch-from-China-ORDER-IN-STOCK-selected-5.html">отправки из китая ЗАКАЗЫ НА СКЛАДЕ уже выбрали 5</a>
     </li>
     <li>
         <a href="shipping-from-china.html">отправки из китая</a>
