--- a/leave-reviews.html
+++ b/leave-reviews.html
@@ -21,25 +21,40 @@
 
         <div class="reviews-img">
             <img src="img/reviews-bg.svg" alt="">
+            <div class="reviews-img__text">
+                <svg width="100%" height="100%" viewBox="0 0 59 59" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M1.357 22.055c1.655-6.232 5.27-11.435 10.022-15.14A29.232 29.232 0 0 1 26.332.899a29.421 29.421 0 0 1 10.533.824c15.542 4.089 24.845 19.822 20.777 35.14a28.31 28.31 0 0 1-4.107 8.895c-3.124 4.507-7.48 7.987-12.475 10.1a29.303 29.303 0 0 1-18.925 1.336C6.593 53.104-2.709 37.371 1.358 22.054z"
+                          fill="#FFBD28"/>
+                    <path opacity=".31"
+                          d="M11.377 6.913A29.232 29.232 0 0 1 26.33.897l27.202 44.857c-3.125 4.507-7.482 7.987-12.476 10.1L11.377 6.915z"
+                          fill="#fff"/>
+                    <path d="M29.21 6.099a23.97 23.97 0 0 1 6.411.795c12.676 3.334 20.29 16.211 16.973 28.704-3.319 12.494-16.33 19.942-29.005 16.608C10.914 48.87 3.301 35.994 6.617 23.5 9.373 13.123 18.823 6.223 29.21 6.099zm.75 44.519c9.332-.11 17.821-6.309 20.298-15.634C53.24 23.76 46.4 12.192 35.011 9.197 23.622 6.2 11.933 12.894 8.952 24.117 5.972 35.34 12.812 46.91 24.2 49.904c1.926.506 3.86.737 5.76.714z"
+                          fill="#F69300"/>
+                    <text x="13" y="36" fill="#FFFFFF" font-weight="700">50</text>
+                    <text x="37" y="36" fill="#FFFFFF" font-weight="300">₽</text>
+                </svg>
+            </div>
         </div>
 
         <p class="text mb-10 text-bold">Напишите отзыв о нашей компании и получите 50₽ на баланс</p>
 
-        <form action="" class="reviews-form">
+        <form action="" class="reviews-form mb-30">
             <div class="mb-10">
                 <textarea name="" class="input input--muted input--textarea" placeholder="Текст отзыва"></textarea>
             </div>
-            <div class="d-flex justify-between align-start">
-                <div class="d-flex f-wrap">
+            <div class="mb-10">
+                <div class="d-flex f-wrap mb-5">
                     <label class="btn add-file mr-10 mb-10">
                         <input type="file" class="input-hide">
                         <svg width="20" height="20"><use href="#i-file"></use></svg>
                     </label>
                     <img class="reviews__add-img" src="img/review.png" alt="">
                 </div>
-                <span class="color-blue shrink-0" onclick="document.getElementById('modal-review').classList.add('active')">Предпросмотр</span>
             </div>
 
+            <div class="d-flex flex-end mb-15">
+                <span class="color-blue shrink-0" onclick="document.getElementById('modal-review').classList.add('active')">Предпросмотр</span>
+            </div>
             <div class="d-flex align-center reviews-form__bottom">
                 <div class="shrink-0 mr-30">
                     <small class="text--muted">Вы соглашаетесь с нашими<br> <a href="#" class="underline">Условиями использования</a></small>
