--- a/shipping-history.html
+++ b/shipping-history.html
@@ -216,7 +216,7 @@
                             </ul>
                             <div class="order-slider__tab active">
                                 <!-- no-slider -->
-                                <div class="">
+                                <div class="d-none">
                                     <ul class="reset-list justify-between">
                                         <li>
                                             <span>Дата:</span>
@@ -267,9 +267,9 @@
                                     </div>
                                 </div>
                                 <!-- slider -->
-                                <div class="quantity-place d-none">
+                                <div class="quantity-place ">
                                     <div class="quantity-place__top">
-                                        <button class="btn prev">
+                                        <button class="btn prev" disabled>
                                             <svg width="5" height="9"><use href="#i-arrow"></use></svg>
                                         </button>
 
@@ -950,7 +950,7 @@
 
                                 <div class="delivery__bottom">
                                     <a href="#" class="btn btn--outline btn--red">
-                                        <span>подтвердить получение</span>
+                                        <span>недостаточно информации</span>
                                         <svg width="5" height="9">
                                             <use href="#i-arrow-red"></use>
                                         </svg>
