правки по всем страницам

--- a/Dispatch-from-China-ORDER-IN-STOCK-selected-2.html
+++ b/Dispatch-from-China-ORDER-IN-STOCK-selected-2.html
@@ -67,6 +67,21 @@
                     <input class="d-none" type="radio" name="packing_method" id="packing_method3">
                     <label class="method__label" for="packing_method3">
                         <div class="method__icon--sm">
+                            <svg width="24" height="25"><use href="#ugolki"></use></svg>
+                        </div>
+                        <span class="method__title grow-1">Уголки + мешок + скотч</span>
+                        <span class="method__price mr-10">2$</span>
+                        <div class="checkbox">
+                            <span class="checkbox__icon">
+                                <svg width="10" height="8"><use href="#i-check"></use></svg>
+                            </span>
+                        </div>
+                    </label>
+                </div>
+                <div class="method">
+                    <input class="d-none" type="radio" name="packing_method" id="packing_method4">
+                    <label class="method__label" for="packing_method4">
+                        <div class="method__icon--sm">
                             <svg width="24" height="24"><use href="#obreshetka"></use></svg>
                         </div>
                         <span class="method__title grow-1">Обрешетка + мешок + скотч </span>
@@ -79,8 +94,8 @@
                     </label>
                 </div>
                 <div class="method">
-                    <input class="d-none" type="radio" name="packing_method" id="packing_method4">
-                    <label class="method__label" for="packing_method4">
+                    <input class="d-none" type="radio" name="packing_method" id="packing_method5">
+                    <label class="method__label" for="packing_method5">
                         <div class="method__icon--sm">
                             <svg width="24" height="24"><use href="#palet"></use></svg>
                         </div>
