--- a/shipping-from-china.html
+++ b/shipping-from-china.html
@@ -26,7 +26,7 @@
                 <svg width="6" height="11"><use href="#i-arrow"></use></svg>
             </a>
             <a href="#" class="btn btn--outline btn--notification mb-10">
-                <span>история отправоке</span>
+                <span>история отправке</span>
                 <svg width="6" height="11"><use href="#i-arrow"></use></svg>
             </a>
             <a href="#" class="btn btn--outline  mb-10">
@@ -64,8 +64,8 @@
             <div class="shipping-address__content">
                 <div class="d-flex align-center pb-20">
                     <div class="grow-1 mr-10">
-                        广州市越秀区荔德路318号 汇富商 贸中<br>
-                        心A28 栋102仓库 13128641323 ALEXEYH.<br>
+                        义乌市群英路283号车氏集团院内<br>
+                        张苹 13128641323 ALEXEYH.<br>
                         箱子上面写 "ID0001/00001”
                     </div>
                     <button class="copy-btn shrink-0">
