--- a/shipping-history.html
+++ b/shipping-history.html
@@ -802,7 +802,7 @@
                                                 <svg width="15" height="17"><use href="#i-info-black"></use></svg>
                                             </button>
                                         </span>
-                                        <span class="">0$</span>
+                                        <span class="text-bold">203$</span>
                                     </li>
                                 </ul>
 
