--- a/stock-orders.html
+++ b/stock-orders.html
@@ -19,7 +19,7 @@
             <p class="title">заказы на складе</p>
         </div>
         <p class="text mb-30">В этом разделе будут отображены Ваши заказы на
-            выкуп с китайскиз сайтов или груз отправленный
+            выкуп с китайских сайтов или груз отправленный
             на наш склад без оформления предварительной
             заявки на доставку.</p>
 
