--- a/story-sending.html
+++ b/story-sending.html
@@ -23,7 +23,7 @@
         <!--    нет операций   -->
         <div class="mb-40 pt-20 transactions-not-result text-center">
             <img class="mb-20" width="195" height="200" src="./img/not-result.png" alt="">
-            <p class="text">У Вас еще нет ни одного заказа<br> на складе</p>
+            <p class="text">У Вас еще нет ни одного заказа <br> на отправку</p>
         </div>
 
         <div class="large-buttons">
