--- a/Dispatch-from-China-ORDER-IN-STOCK.html
+++ b/Dispatch-from-China-ORDER-IN-STOCK.html
@@ -158,7 +158,7 @@
                 <div class="delivery">
                     <label class="checkbox justify-between align-start border-bottom w-100 pb-30">
                         <div class="grow-1">
-                            <div class="mb-5 text-bold">Заказ на выкуп №2</div>
+                            <div class="mb-5 text-bold">Консолидация товара №2</div>
                             <small class="green-ellipse">Статус: Готов к отправке</small>
                         </div>
                         <input type="checkbox" class="input-hide" checked="">
