--- a/leave-reviews.html
+++ b/leave-reviews.html
@@ -19,7 +19,7 @@
             <p class="title">отзывы</p>
         </div>
 
-        <div class="reviews-img">
+        <div class="reviews-img mb-30">
             <img src="img/reviews-bg.svg" alt="">
             <div class="reviews-img__text">
                 <svg width="100%" height="100%" viewBox="0 0 59 59" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -36,7 +36,7 @@
             </div>
         </div>
 
-        <p class="text mb-10 text-bold">Напишите отзыв о нашей компании и получите 50₽ на баланс</p>
+        <p class="text mb-15 text-bold">Напишите отзыв о нашей компании<br> и получите 50₽ на баланс</p>
 
         <form action="" class="reviews-form mb-30">
             <div class="mb-10">
