menu fix background

--- a/Dispatch-from-China-ORDER-IN-STOCK-selected-5.html
+++ b/Dispatch-from-China-ORDER-IN-STOCK-selected-5.html
@@ -187,7 +187,7 @@
                     <div class="method method--no-icon">
                         <input class="d-none" type="radio" name="packing_method" id="delivery-russia10">
                         <label class="method__label" for="delivery-russia10">
-                            <span class="method__title">Самовывоз<br> южные ворота</span>
+                            <span class="method__title">Самовывоз<br> Южные ворота</span>
                             <span class="grow-1">0 дн</span>
                             <span class="method__price mr-10">2$</span>
                             <div class="checkbox">
