fix reviews block

--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
     <li>
         <a href="story-sending.html">история отправок</a>
     </li>
+    <li>
+        <a href="reviews-menegers-not.html"> Отзывы менеджер НЕТ</a>
+    </li>
 </ul>
 
 </body>
