add new method delivery

--- a/shipping-china-history-2.html
+++ b/shipping-china-history-2.html
@@ -33,6 +33,21 @@
 
             <div class="mb-20">
                 <div class="method">
+                    <input class="d-none" type="radio" name="packing_method" id="packing_method0" checked>
+                    <label class="method__label" for="packing_method0">
+                        <div class="method__icon--sm">
+                            <svg width="18" height="24"><use href="#small-paket"></use></svg>
+                        </div>
+                        <span class="method__title grow-1">Мелкий пакет</span>
+                        <span class="method__price mr-10">2$</span>
+                        <div class="checkbox">
+                            <span class="checkbox__icon">
+                                <svg width="10" height="8"><use href="#i-check"></use></svg>
+                            </span>
+                        </div>
+                    </label>
+                </div>
+                <div class="method">
                     <input class="d-none" type="radio" name="packing_method" id="packing_method1" checked>
                     <label class="method__label" for="packing_method1">
                         <div class="method__icon--sm">
