add storage pages

--- a/index.html
+++ b/index.html
@@ -150,10 +150,25 @@
         <a href="reviews.html">отзывы</a>
     </li>
     <li>
-        <a href="story-sending.html">история отправок</a>
+        <a href="story-sending.html">история отправок нет резултата</a>
     </li>
     <li>
         <a href="reviews-menegers-not.html"> Отзывы менеджер НЕТ</a>
+    </li>
+    <li>
+        <a href="Storage-pdf.html">Склад PDF</a>
+    </li>
+    <li>
+        <a href="Storage-image.html">Склад IMAGE</a>
+    </li>
+    <li>
+        <a href="Storage-not-order.html">Склад - таких заказов нет</a>
+    </li>
+    <li>
+        <a href="Storage-create-order.html">Склад - создать заказ</a>
+    </li>
+    <li>
+        <a href="Storage-unknown-order.html">Склад - Неизвестный заказ</a>
     </li>
 </ul>
 
