--- a/Dispatch-from-China-ORDER-IN-STOCK-selected-2.html
+++ b/Dispatch-from-China-ORDER-IN-STOCK-selected-2.html
@@ -13,7 +13,7 @@
 </div>
 
 <div class="container">
-    <div class="pt-30">
+    <div class="pt-30 mb-30">
         <div class="small-logo">
             <svg width="13" height="15">
                 <use href="#logo-sm"></use>
