--- a/Dispatch-from-China-ORDER-IN-STOCK-selected.html
+++ b/Dispatch-from-China-ORDER-IN-STOCK-selected.html
@@ -106,7 +106,7 @@
             </div>
         </div>
 
-        <div class="d-flex align-center justify-between">
+        <div class="d-flex align-center justify-between mb-30">
             <strong class="mr-30">Вы выбрали 5 заказов</strong>
             <a href="#" class="btn btn--yellow btn--auto-2">
                 <span>далее</span>
