changes shipping history styles

--- a/shipping-history.html
+++ b/shipping-history.html
@@ -476,7 +476,11 @@
                                     </div>
                                 </div>
                                 <div class="top-scroll-content"></div>
-                                <div class="delivery__bottom">
+                                <div class="delivery__bottom justify-between">
+                                    <div class="text--big text-uppercase">
+                                        <small>ИТОГО:</small>
+                                        <strong class="ml-5">260$</strong>
+                                    </div>
                                     <a href="#" class="btn btn--yellow btn--auto">
                                         <span>оплатить</span>
                                         <svg width="5" height="9">
